# russet

./: .env  Cargo.toml  README.md  russet.toml.sample  template_db.sqlite
db/: template_db.sqlite
db/migrations/: 0_Init.sql  1_User_entry_settings.sql  2_Indexes.sql  3_User_settings.sql  4_Update_metadata.sql  5_More_indexes.sql  6_User_tz.sql
src/: async_util.rs  cli.rs  conf.rs  main.rs  model.rs  server.rs
src/domain/: entries.rs  feeds.rs  mod.rs  model.rs  user.rs
src/domain/feeds/: mod.rs  update.rs
src/feed/: atom.rs  mod.rs  model.rs  rss.rs
src/feed/model/: mod.rs
src/http/: entry.rs  error.rs  feed.rs  login.rs  mod.rs  root.rs  session.rs  static_routes.rs  subscribe.rs  user.rs
src/http/static/: styles.css
src/persistence/: mod.rs  model.rs  sql.rs
src/persistence/model/: mod.rs
src/persistence/sql/: entry.rs  feed.rs  mod.rs  user.rs
templates/: error.stpl  feed.stpl  foot.stpl  head.stpl  home.stpl  login.stpl  pagination.stpl  root.stpl  subscribe.stpl  user.stpl
templates/static/: styles.css.stpl
