[package]
name = "russet"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["alloc", "std"] }
atom_syndication = "0.12"
axum = { version = "0.7", features = ["tracing"] }
axum-extra = { version = "0.9", features = ["cookie"] }
axum-macros = "0.4.1"
base32ct = { version = "0.2", features = ["std", "alloc"] }
chrono = "0.4"
getrandom = { version = "0.2", features = ["std"] }
reqwest = "0.11"
rss = "2.0"
serde = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "migrate", "runtime-tokio-native-tls"] }
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.1"
